@@ -70,9 +70,14 @@ def main():
 
   typeshed = environment.initialize_typeshed_or_die()
   env = analyze_project_env.create_importlab_environment(conf, typeshed)
+  print('Computing dependencies')
   try:
     import_graph = importlab.graph.ImportGraph.create(
         env, conf.inputs, trim=True)
+    unreadable_inputs = conf.inputs & import_graph.unreadable_files
+    assert not unreadable_inputs, '\n  '.join(
+        ['Unparseable in Python %s:' % conf.python_version] +
+        sorted(unreadable_inputs))
   except Exception as e:  # pylint: disable=broad-except
     logging.critical('Cannot parse input files:\n%s', str(e))
     sys.exit(1)
